force-app/main/default/objects/amorgan__GoalSheet__c/amorgan__GoalSheet__c.object-meta.xml
<CustomObject>
    <label>GoalSheet</label>
    <nameField>
        <label>GoalSheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GoalSheets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>