force-app/main/default/objects/amorgan__GoalSheet__c/fields/amorgan__Filter__c.field-meta.xml
<CustomField>
    <fullName>amorgan__Filter__c</fullName>
    <label>Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>