force-app/main/default/objects/amorgan__GoalSheet__c/fields/amorgan__OppFilter__c.field-meta.xml
<CustomField>
    <fullName>amorgan__OppFilter__c</fullName>
    <label>Opportunity Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>