force-app/main/default/objects/amorgan__GoalSheet__c/fields/amorgan__OppOwnerField__c.field-meta.xml
<CustomField>
    <fullName>amorgan__OppOwnerField__c</fullName>
    <label>Owner Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CreatedById</fullName>
            </value>
            <value>
                <fullName>LastModifiedById</fullName>
            </value>
            <value>
                <fullName>OwnerId</fullName>
                <default>true</default>
                <label>OwnerId</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>