force-app/main/default/objects/amorgan__GoalSheet__c/fields/amorgan__OppVolumeWeightedField__c.field-meta.xml
<CustomField>
    <fullName>amorgan__OppVolumeWeightedField__c</fullName>
    <label>Open Volume Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Probability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>