force-app/main/default/objects/amorgan__GoalSheet__c/fields/amorgan__UseSplits__c.field-meta.xml
<CustomField>
    <fullName>amorgan__UseSplits__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Splits</label>
    <type>Checkbox</type>
</CustomField>