force-app/main/default/objects/amorgan__GoalSheet__c/listViews/amorgan__Default.listView-meta.xml
<ListView>
    <fullName>amorgan__Default</fullName>
    <columns>NAME</columns>
    <columns>amorgan__Filter__c</columns>
    <columns>amorgan__OppAmtField__c</columns>
    <columns>amorgan__OppOwnerField__c</columns>
    <columns>amorgan__OppWeightedField__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default</label>
</ListView>